--- a/MTTS Website Code/contact_style.css
+++ b/MTTS Website Code/contact_style.css
@@ -37,6 +37,12 @@ body, html {
      top: 0;
      z-index: 5;
  }
+
+body .navbar-fixed-top{
+    position: fixed !important;
+    width: 100%;
+    top: 0 !important;
+}
  .header_links{
      float: left;
  }
