--- a/MTTS Website Code/history_style.css
+++ b/MTTS Website Code/history_style.css
@@ -37,6 +37,11 @@ body, html {
      top: 0;
      z-index: 5;
  }
+ .navbar-fixed-top{
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
  .header_links{
      float: left;
  }
