--- a/MTTS Website Code/home_style.css
+++ b/MTTS Website Code/home_style.css
@@ -85,7 +85,7 @@ body, html {
 #description{
     text-align: center;
     margin: auto;
-    font-size: 40px;
+    font-size: 2.3vw;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: blue;
     font-weight: bold;
@@ -93,7 +93,7 @@ body, html {
 #description_text{
     text-align: justify;
     margin: 10px 7% 0px 7%;
-    font-size: 31px;
+    font-size: 2vw;
     position: relative;
     left: auto;
     display: block;
@@ -112,7 +112,7 @@ body, html {
     left: auto;
     color: blue;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 2.3vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .single_event_info{
@@ -131,20 +131,20 @@ body, html {
     margin-top: -22px;
     color: black;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 2.3vw;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     background-color: whitesmoke;
   }
  .event_description{
-     font-size: 40px;
+     font-size: 2.3vw;
      color: midnightblue;
      text-align: center;
      background-color: whitesmoke;
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  } 
  .event_description_past{
-    font-size: 40px;
+    font-size: 2.3vw;
     color: mediumblue;
     text-align: center;
     background-color: whitesmoke;
@@ -201,14 +201,14 @@ body, html {
 }
 .date_time{
     text-align: left;
-    font-size: 25px;
+    font-size: 1.8vw;
     color: blue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-left: 1%;
 }
 .date_time_up{
     text-align: left;
-    font-size: 26px;
+    font-size: 1.8vw;
     color: rgb(82, 75, 75);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-left: 1%;
@@ -222,7 +222,7 @@ body, html {
 }
 .about_section{
     text-align: center;
-    font-size: 40px;
+    font-size: 2.3vw;
     color: blue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -230,7 +230,7 @@ body, html {
     text-align: justify;
     margin: 10px 7% 20px 7%;
     position: relative;
-    font-size: 31px;
+    font-size: 1.8vw;
     color: rgb(65, 63, 63);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
@@ -241,14 +241,14 @@ body, html {
     width: 100%;
 }
 .table_heading{
-    font-size: 40px;
+    font-size: 2.3vw;
     color: white;
     font-weight: normal;
     padding: 1% 0px 0.5% 30%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .site_map a{
-    font-size: 25px;
+    font-size: 1.7vw;
     text-decoration: none;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -270,7 +270,7 @@ body, html {
 }
 .side_heading{
     color: white;
-    font-size: 40px;
+    font-size: 2.3vw;
     padding: 1% 0px 0px 5%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -280,7 +280,7 @@ body, html {
     padding: 1% 7% 0px 0%;
 }
 .useful_links a{
-    font-size: 25px;
+    font-size: 1.7vw;
     text-decoration: none;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -299,7 +299,7 @@ body, html {
 }
 .credits_copyright{
     text-align: center;
-    font-size: 23px;
+    font-size: 1.7vw;
     color: white;
     margin: 0;
     padding-top: 2%;
@@ -311,7 +311,7 @@ body, html {
     text-align: justify;
     margin: 10px 7% 20px 6.5%;
     position: relative;
-    font-size: 31px;
+    font-size: 1.9vw;
     color: rgb(68, 67, 67);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
