--- a/MTTS Website Code/event-style.css
+++ b/MTTS Website Code/event-style.css
@@ -96,7 +96,7 @@ body, html {
     background-color: darkblue;
     top: 6.8%;
     bottom: 3%;
-    left: 70%;
+    left: 69.7%;
     margin-left: -3px;
   }
   .event {
@@ -108,8 +108,8 @@ body, html {
   .event::after {
     content: '';
     position: absolute;
-    width: 40px;
-    height: 40px;
+    width: 3vw;
+    height: 3vw;
     right: -6.4%;
     background-color: green;
     border: 9px solid gold;
@@ -139,10 +139,10 @@ body, html {
     background-image: linear-gradient(to right,rgb(59, 51, 51),rgb(107, 106, 106));
     position: relative;
     border-radius: 6px;
-    font-size: 19px;
+    font-size: 1.2vw;
   }
   .event_content p{
-      font-size: 21px;
+      font-size: 1.4vw;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: whitesmoke;
   }
@@ -156,14 +156,14 @@ body, html {
     width: 100%;
 }
 .table_heading{
-    font-size: 40px;
+    font-size: 2.7vw;
     color: white;
     font-weight: normal;
     padding: 1% 0px 0.5% 30%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .site_map a{
-    font-size: 25px;
+    font-size: 1.7vw;
     text-decoration: none;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -214,7 +214,7 @@ body, html {
 }
 .credits_copyright{
     text-align: center;
-    font-size: 23px;
+    font-size: 1.7vw;
     color: white;
     margin: 0;
     padding-top: 2%;
