--- a/MTTS Website Code/gallery_style.css
+++ b/MTTS Website Code/gallery_style.css
@@ -89,14 +89,14 @@ body, html {
     width: 100%;
 }
 .table_heading{
-    font-size: 40px;
+    font-size: 2.7vw;
     color: white;
     font-weight: normal;
     padding: 1% 0px 0.5% 30%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .site_map a{
-    font-size: 25px;
+    font-size: 1.7vw;
     text-decoration: none;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
