--- a/MTTS Website Code/event-style.css
+++ b/MTTS Website Code/event-style.css
@@ -140,7 +140,7 @@ body, html {
     height: 3vw;
     right: -6.4%;
     background-color: green;
-    border: 9px solid gold;
+    border: 0.7vw solid gold;
     border-radius: 50%;
     top: 24.6%;
     z-index: 1;
