--- a/MTTS Website Code/home_style.css
+++ b/MTTS Website Code/home_style.css
@@ -295,7 +295,7 @@ body, html {
     float: left;
     background-color: black;
     width: 33.333333%;
-    height: auto;
+    height: 33vw;
     margin: 0;
 }
 .side_heading{
