--- a/MTTS Website Code/home_style.css
+++ b/MTTS Website Code/home_style.css
@@ -267,7 +267,7 @@ body, html {
 }
 .footer_menu{
     background-color: black;
-    height: auto;
+    height: 59%;
     width: 100%;
 }
 .table_heading{
