--- a/MTTS Website Code/member_style.css
+++ b/MTTS Website Code/member_style.css
@@ -187,7 +187,7 @@ body, html {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container{
-    margin: 10vw;
+    margin: 7vw;
     background-color: lightblue;
     height: 25vw;
     border: 0px solid rgb(184, 232, 248);
@@ -207,7 +207,7 @@ body, html {
     padding: 1% 0% 1% 4%;
 }
 .placeholder{
-    width: 55vw;
+    width: 62vw;
     float: right;
     height: 100%;
     background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
@@ -225,16 +225,21 @@ body, html {
     line-height: 2.8vw;
 }
 .placeholder_wide{
-    width:68.7%;
+    width: 59vw;
     float: right;
     height: 100%;
     background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
-    border-radius: 0px 1.3vw 1.3vw 0px;
+    border-radius: 0px 20px 20px 0px;
+}
+.member_picture_wide{
+    width: 24vw;
+    height: 21vw;
+    padding: 2vw 2vw 2vw 3vw;
 }
 .container_big{
-    margin: 3% 5% 6% 5%;
+    margin: 10vw;
     background-color: lightblue;
-    height: 65%;
+    height: 30vw;
     border: 0px solid rgb(184, 232, 248);
     border-radius: 1.3vw;
 }
@@ -242,7 +247,7 @@ body, html {
     box-shadow: 1px 1px 0.7vw 0.7vw rgb(151, 140, 140);
 }
 .member_picture_big{
-    width: 22.4%;
-    height: 82%;
-    padding: 3% 0% 5% 2.3%;
+    width: 18vw;
+    height: 25vw;
+    padding: 1.3vw 0.5vw 1.3vw 1.3vw;
 }
