--- a/MTTS Website Code/member_style.css
+++ b/MTTS Website Code/member_style.css
@@ -229,7 +229,7 @@ body, html {
     float: right;
     height: 100%;
     background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 0px 1.3vw 1.3vw 0px;
 }
 .member_picture_wide{
     width: 24vw;
