--- a/MTTS Website Code/history_style.css
+++ b/MTTS Website Code/history_style.css
@@ -210,39 +210,27 @@ body, html {
     line-height: 1.5;
 }
 .container{
-    margin: 3% 5% 6% 5%;
+    margin: 7vw;
     background-color: lightblue;
-    height: 54%;
+    height: 25vw;
     border: 0px solid rgb(184, 232, 248);
-    border-radius: 1.3vw;
+    border-radius: 1.3vw 1.3vw 1.3vw 1.3vw;
 }
 .container:hover{
     box-shadow: 1px 1px 0.7vw 0.7vw rgb(151, 140, 140);
 }
 .member_picture{
-    width: 21%;
-    height: 90%;
-    padding: 1.3% 0% 1.3% 3%;
+    width: 18vw;
+    height: 23vw;
+    padding: 1vw 2vw 1vw 2vw;
 }
 .member_picture_other{
-    width: 18%;
-    height: 92%;
+    width: 15vw;
+    height: 23vw;
     padding: 1% 0% 1% 4%;
 }
-.member_picture_wide{
-    width: 25%;
-    height: 82%;
-    padding: 2% 0% 2% 3%;
-}
 .placeholder{
-    width:73%;
-    float: right;
-    height: 100%;
-    background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
-    border-radius: 0px 1.3vw 1.3vw 0px;
-}
-.placeholder_wide{
-    width:68.7%;
+    width: 62vw;
     float: right;
     height: 100%;
     background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
@@ -250,18 +238,31 @@ body, html {
 }
 .designation{
     font-size: 1.7vw;
-    margin-top: 2.3%;
+    margin-top: 1.3vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .bio{
     font-size: 1.7vw;
+    margin-top: 0.3vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.7;
+    line-height: 2.8vw;
+}
+.placeholder_wide{
+    width: 59vw;
+    float: right;
+    height: 100%;
+    background-image: linear-gradient(to right,lightblue,rgb(85, 85, 241));
+    border-radius: 0px 1.3vw 1.3vw 0px;
+}
+.member_picture_wide{
+    width: 24vw;
+    height: 21vw;
+    padding: 2vw 1vw 2vw 2vw;
 }
 .container_big{
-    margin: 3% 5% 6% 5%;
+    margin: 7vw;
     background-color: lightblue;
-    height: 65%;
+    height: 30vw;
     border: 0px solid rgb(184, 232, 248);
     border-radius: 1.3vw;
 }
@@ -269,7 +270,7 @@ body, html {
     box-shadow: 1px 1px 0.7vw 0.7vw rgb(151, 140, 140);
 }
 .member_picture_big{
-    width: 22.4%;
-    height: 82%;
-    padding: 3% 0% 5% 2.3%;
+    width: 18vw;
+    height: 25vw;
+    padding: 1.3vw 0.5vw 1.3vw 1.3vw;
 }
