--- a/MTTS Website Code/home_style.css
+++ b/MTTS Website Code/home_style.css
@@ -207,12 +207,12 @@ body, html {
   }
 .past_events{
     position: relative;
-    margin: 30px 25% 0px 25%;
+    margin: 0.5vw 23vw 0.5vw 23vw;
     display: block; 
     background-color: whitesmoke;
-    padding: 10px;
-    border: 3px solid whitesmoke;
-    border-radius: 12px;
+    padding: 1vw;
+    border: 0.1vw solid whitesmoke;
+    border-radius: 1vw;
 }
 .upcoming_event_poster{
     width: 70.9%;
@@ -360,8 +360,9 @@ body, html {
     color: rgb(110, 112, 236);
 }
 .past_event_poster_ver{
-    width: 90%;
-    height: 815px;
+    width: 34vw;
+    height: 55vw;
     background-color: whitesmoke;
-    padding-left: 5%;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
